fix(left-side): fix outline on firefox

--- a/fe/src/components/left-side/left-side.scss
+++ b/fe/src/components/left-side/left-side.scss
@@ -1,4 +1,4 @@
-$left-side-border-color: rgba(0, 0, 0, 0.3);
+$left-side-border-color: rgba(255, 255, 255, 0.3);
 $left-side-border: 2px solid $left-side-border-color;
 
 .left-side {
@@ -104,7 +104,7 @@ $left-side-border: 2px solid $left-side-border-color;
         top: 0;
         right: 0;
         transform: translateX(100%);
-        outline: $left-side-border;
+        border: $left-side-border;
         background-color: $mainColor;
 
         @include media-breakpoint-down(sm) {
